tests/errors/compiler/wrong_struct/struct_name_int.c
int main()
{
	int a;

	struct int
	{
		char lastname[20];   
		char firstname[20]; 
		int year;
	};
	return 0;
}
